src/objects/SomDig_Contentsyndicationpartner__c.object
<CustomObject>
    <description>Nimmt die Leistungswerte für alle ContentsydicationPartner auf, welche über das Datatransfer-File von google angeliefert werden. Wird benötigt um die Umsatz Aufteilung für die Contentsyndication-Partner auf gesonderte Innenauftragsnummern (IA) gewährleistet werden.</description>
    <fields>
        <fullName>SomDig_AdUnitId__c</fullName>
        <description>Auf welcher AdUnit innerhalb des Adservers ist diese Leistung entstanden.</description>
        <inlineHelpText>Auf welcher AdUnit innerhalb des Adservers ist diese Leistung entstanden.</inlineHelpText>
        <label>AdUnit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomDig_Count__c</fullName>
        <description>Anzahl der Aggregation</description>
        <inlineHelpText>Anzahl der Aggregation</inlineHelpText>
        <label>Anzahl</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomDig_CustomTargeting__c</fullName>
        <description>Kennzeichnet eineindeutig den Contentsyndication Partner
113 - Content One
114 - SnackTV
115 - ClipKit</description>
        <inlineHelpText>Kennzeichnet eineindeutig den Contentsyndication Partner
113 - Content One
114 - SnackTV
115 - ClipKit</inlineHelpText>
        <label>Partner-ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomDig_LineItemId__c</fullName>
        <description>Positionsnummer LineItem innerhalb des Adservers</description>
        <inlineHelpText>Positionsnummer LineItem innerhalb des Adservers</inlineHelpText>
        <label>Positionsnummer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomDig_OrderId__c</fullName>
        <description>Auftragsnummer innerhalb des Adservers.</description>
        <inlineHelpText>Auftragsnummer innerhalb des Adservers.</inlineHelpText>
        <label>Auftragsnummer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomDig_Time__c</fullName>
        <description>An welchem Tag wurde Click/Impression für diesen Contentsyndication- Partner erzeugt.</description>
        <inlineHelpText>An welchem Tag wurde Click/Impression für diesen Contentsyndication- Partner erzeugt.</inlineHelpText>
        <label>Leistungsdatum</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SomDig_Type__c</fullName>
        <description>Handelt es ist um eine Einblendung (AI) oder um einen Klick (Click)</description>
        <inlineHelpText>Handelt es ist um eine Einblendung (AI) oder um einen Klick (Click)</inlineHelpText>
        <label>Leistungstyp</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_Year__c</fullName>
        <formula>YEAR( SomDig_Time__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jahr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Contentsyndication-Partner Daten</label>
    <listViews>
        <fullName>Alle</fullName>
        <columns>NAME</columns>
        <columns>SomDig_Year__c</columns>
        <columns>SomDig_CustomTargeting__c</columns>
        <columns>SomDig_OrderId__c</columns>
        <columns>SomDig_Time__c</columns>
        <columns>SomDig_Type__c</columns>
        <columns>SomDig_AdUnitId__c</columns>
        <columns>SomDig_LineItemId__c</columns>
        <columns>SomDig_Count__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Alle</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>X2015</fullName>
        <columns>NAME</columns>
        <columns>SomDig_CustomTargeting__c</columns>
        <columns>SomDig_OrderId__c</columns>
        <columns>SomDig_Time__c</columns>
        <columns>SomDig_Type__c</columns>
        <columns>SomDig_AdUnitId__c</columns>
        <columns>SomDig_LineItemId__c</columns>
        <columns>SomDig_Count__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SomDig_Year__c</field>
            <operation>equals</operation>
            <value>2015</value>
        </filters>
        <label>2015</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>X2016</fullName>
        <columns>NAME</columns>
        <columns>SomDig_CustomTargeting__c</columns>
        <columns>SomDig_OrderId__c</columns>
        <columns>SomDig_Time__c</columns>
        <columns>SomDig_Type__c</columns>
        <columns>SomDig_AdUnitId__c</columns>
        <columns>SomDig_LineItemId__c</columns>
        <columns>SomDig_Count__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SomDig_Year__c</field>
            <operation>equals</operation>
            <value>2016</value>
        </filters>
        <label>2016</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>X2017</fullName>
        <columns>NAME</columns>
        <columns>SomDig_CustomTargeting__c</columns>
        <columns>SomDig_OrderId__c</columns>
        <columns>SomDig_Time__c</columns>
        <columns>SomDig_Type__c</columns>
        <columns>SomDig_AdUnitId__c</columns>
        <columns>SomDig_LineItemId__c</columns>
        <columns>SomDig_Count__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SomDig_Year__c</field>
            <operation>equals</operation>
            <value>2017</value>
        </filters>
        <label>2017</label>
        <language>de</language>
    </listViews>
    <nameField>
        <displayFormat>CS-{0000}</displayFormat>
        <label>Contentsyndicationpartner-Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contentsyndication-Partner Daten</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>